Change log for duff
===================

Started as of version 0.3.1.

2009-01-16  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duff.c (read_path, kill_trailing_slashes): Moved functions into duffutil.c.
 * duff.h: Added declarations for read_path and kill_trailing_slashes.
 * duff.c (version): Annotated strings for i18n.

2009-01-05  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duff.c (main): Moved option default values into source file.
 * duff.c (main) (usage): Renamed -c flag to -d.

2009-01-04  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duff.c duffdriver.c duffentry.c duffstring.c duffutil.c: Annotated strings for i18n.
 * duff.c (main): Added call to setlocale(3).

2009-01-03  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * sha256.c: Added file.
 * sha256.h: Added file.
 * sha384.c: Added file.
 * sha384.h: Added file.
 * sha512.c: Added file.
 * sha512.h: Added file.
 * duffutil.c (print_message_digest): Added function.
 * duffutil.c (print_cluster_header): Added call to print_message_digest.
 * duffentry.c (get_entry_digest): Added support for digest function selection.
 * duffentry.c (get_entry_digest_sha1) (get_entry_digest_sha256)
   (get_entry_digest_sha384) (get_entry_digest_sha512): Added function.
 * duff.c (main) (usage): Added -c option for selecting digest function.
 * duff.h: Added digest function enumeration.

 * duff.c duffdriver.c duffentry.c duffstring.c duffutil.c: Made off_t 64-bit on glibc.

2006-10-07  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duff.c (main): Always kill trailing slashes (and in a nicer way).
 * duff.c (kill_trailing_slashes): Added function.
 * duff.c (main) (read_path): Don't kill newlines for -0 option.

2006-09-29  Camilla Berglund  <elmindreda@users.sourceforge.net>

 * duff.c (main) (usage): Added -0 option (credits to Clemens Lucas Fries).
 * duff.c (read_path): Added function.